# Microcontroller

./: CMakeLists.txt  README.md  keywords.txt  library.properties  pio_config_for_giga.py  platformio.ini
.github/workflows/: cpplint.yml
WIldBlueberrySensorSystem/: WIldBlueberrySensorSystem.ino
WIldBlueberrySensorSystem/src/ReadSensorData/: ReadSensorData.cpp  ReadSensorData.h
WIldBlueberrySensorSystem/src/Sensors/: Sensor.cpp  Sensor.h
WildBlueberrySensorSystem/: .gitignore  WildBlueberrySensorSystem.h  WildBlueberrySensorSystem.ino  pio_config_for_giga.py  platformio.ini
WildBlueberrySensorSystem/include/ReadSensorData/: ReadSensorData.h
WildBlueberrySensorSystem/src/: main.cpp
WildBlueberrySensorSystem/src/Sensors/: Sensor.cpp
WildBlueberrySensorSystem/tests/: CMakeLists.txt
examples/Blueharvest/: Blueharvest.ino
include/: WildBlueberrySensorSystem.h
include/BluetoothCommunication/: BluetoothCommunication.h
include/DataInterpretation/: DataInterpretation.h
include/DataProcessing/: DataProcessing.h
include/ReadSensorData/: ReadSensorData.h
include/Sensors/: Sensor.h
src/: WildBlueberrySensorSystem.h  main.cpp
src/BluetoothCommunication/: BluetoothCommunication.cpp  BluetoothCommunication.h
src/DataInterpretation/: DataInterpretation.cpp  DataInterpretation.h
src/DataProcessing/: DataProcessing.cpp  DataProcessing.h
src/ReadSensorData/: ReadSensorData.cpp
src/Sensors/: Sensor.cpp  Sensor.h
test/test_ReadSensorData/: test_UltrasonicSensor_MB1010.cpp
test/test_UltrasonicSensor_MB1010/: test_UltrasonicSensor_MB1010.cpp
(+45 files in other folders)
